# skala-day1-collect-pipeline

./: .gitignore  README.md  pyproject.toml
src/: collect.py  config.py  pipeline.py  schema.py  storage.py  transform.py
tests/: test_pipeline.py
